@@ -1,3 +1,9 @@
+2007-05-05  Jens Granseuer  <jensgr@gmx.net>
+
+	* gnome-keyboard-properties.c: (create_dialog):
+	* gnome-keyboard-properties.glade: set button images via code instead
+	of relying on glade, so they respect the gtk-button-images xsetting
+
 2007-04-27  Rodrigo Moya <rodrigo@gnome-db.org>
 
 	* keyboard.desktop.in.in: renamed Bugzilla product.
